Style footnotes and fix hr spacing

--- a/assets/scss/pages/post.scss
+++ b/assets/scss/pages/post.scss
@@ -44,8 +44,10 @@ $tocBreakpoint: 1024px;
     font-size: 1rem;
 
     a {
-      color: $darkGrey;
-      text-decoration: underline;
+      text-decoration: none;
+      color: $primary;
+      margin-left: 0.2rem;
+      font-size: 0.75rem;
     }
   }
 
@@ -237,5 +239,48 @@ table {
   td {
     padding: 0.5em 1em;
     border: 1px double $greyTableBorder;
+  }
+}
+
+/* footnote customization */ 
+
+// Footnote ([1])
+a[href^="#fn:"] {
+  text-decoration: none;
+  color: $primary;
+  font-family: 'monospace';
+  border-radius: 3px;
+  font-size: .75rem;
+  &:hover {
+    background: lighten($primary, 38%);
+  }
+  &::before {
+    content: "[";
+  }
+  &::after {
+    content: "]";
+  }
+}
+  
+// Return to footnote (↩︎)
+a[href^="#fnref:"] {
+  text-decoration: none;
+  color: $primary;
+  border-radius: 3px;
+  padding: 0rem 0.2rem 0rem 0.2rem;
+  font-size: 0.85rem;
+  
+  &:hover {
+    background: lighten($primary, 38%);
+  }
+}
+
+// Line separating post content from the footnotes at the bottom
+
+.footnotes {
+  > hr {
+    color: $grey;
+    border-top: 1px;
+    margin: 1rem 0;
   }
 }
